네이버 분석기 추가

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,4 +17,10 @@
 
   </body>
 
+  <script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script>
+  <script type="text/javascript">
+  if(!wcs_add) var wcs_add = {};
+  wcs_add["wa"] = "10afafab7d2b1cc";
+  wcs_do();
+  </script>
 </html>
