--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,12 @@
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <script type="text/javascript" src="{{ "/js/wcslog.js" | prepend: site.baseurl }}"></script>
+
+  <script type="text/javascript">
+  if(!wcs_add) var wcs_add = {};
+  wcs_add["wa"] = "10afafab7d2b1cc";
+  wcs_do();
+  </script>
+  
 </head>
