--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,5 +20,12 @@
   wcs_add["wa"] = "10afafab7d2b1cc";
   wcs_do();
   </script>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6394677201473828",
+    enable_page_level_ads: true
+  });
+</script>
   
 </head>
