--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,6 +31,7 @@ layout: default
         {{page.next.title}} &raquo;
     </a>
   {% endif %}
+    <span class="page-tagline"><em>{{page.tagline}}</em></span>
   </footer>
 
   <div id="disqus_thread"></div>
